# Pixhawk-Project

./: .gitignore  Cargo.toml  flash.sh  memory.x
.cargo/: config.toml
src/: main.rs
uploader/: px_uploader.py  upload.sh
