[package]
authors = ["mkiit"]
edition = "2021"
readme = "README.md"
name = "pixhawk-test"
version = "0.1.0"


[[bin]]
name = "pixhawk-test"
test = false
bench = false

[dependencies]

embassy-sync = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git", rev = "ba18656", features = ["defmt"] }
embassy-executor = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git", rev = "ba18656", features = ["defmt", "integrated-timers"] }
embassy-time = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git", rev = "ba18656", features = ["defmt", "defmt-timestamp-uptime", "unstable-traits", "tick-hz-32_768"] }
embassy-stm32 = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git", rev = "ba18656", features = ["stm32f427vg", "nightly", "unstable-traits", "defmt", "unstable-pac", "memory-x", "time-driver-any", "exti"]  }
embassy-usb = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git", rev = "ba18656", features = ["defmt"] }
#embassy-net = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git", rev = "ba18656", features = ["defmt", "tcp", "dhcpv4", "medium-ethernet", "nightly"], optional = true }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.2"
embedded-hal = "0.2.7"
embedded-io = "0.4.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
heapless = { version = "0.7.5", default-features = false }
nb = "1.0.0"
embedded-storage = "0.3.0"
micromath = "2.0.0"
static_cell = "1.0"

#panic-halt = "0.2.0"

#
#
#cortex-m = "0.7.6"
#cortex-m-rt = "0.7.2"
#cortex-m-semihosting = "0.5.0"
#panic-halt = "0.2.0"
#
#[dependencies.stm32f4xx-hal]
#version = "0.14.0"
#features = ["stm32f427"]
#
#embassy-stm32 = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git", rev = "ba18656", features = ["stm32f401cc"] }
#
## Uncomment for the panic example.
## panic-itm = "0.4.1"
#
## Uncomment for the allocator example.
## alloc-cortex-m = "0.4.0"
#
## Uncomment for the device example.
## Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
## and then use `cargo build --examples device` to build it.
## [dependencies.stm32f3]
## features = ["stm32f303", "rt"]
## version = "0.7.1"


[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
